--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -10,13 +10,14 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@drawable/filmder"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:label="Filmder"
+        android:roundIcon="@drawable/filmder"
         android:supportsRtl="true"
         android:theme="@style/Theme.VV1"
-        tools:targetApi="31" >
-
-
+        tools:targetApi="31">
+        <activity
+            android:name=".SwipeAloneActivity"
+            android:exported="false" />
         <activity
             android:name=".SwipeTogActivity"
             android:exported="false"
@@ -30,7 +31,7 @@
             android:exported="false" />
         <activity
             android:name=".WellcomeActivity1"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
