--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,27 +16,27 @@
         android:theme="@style/Theme.VV1"
         tools:targetApi="31">
         <activity
-            android:name=".SignupActivity"
+            android:name=".view.SignupActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".view.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".SwipeAloneActivity"
+            android:name=".view.SwipeAloneActivity"
             android:exported="false" />
         <activity
-            android:name=".SwipeTogActivity"
+            android:name=".view.SwipeTogActivity"
             android:exported="false"
             android:label="@string/title_activity_main4"
             android:theme="@style/Theme.VV1" />
         <activity
-            android:name=".CodeAuthActivity"
+            android:name=".view.CodeAuthActivity"
             android:exported="false" />
         <activity
-            android:name=".WellcomeActivity2"
+            android:name=".view.WellcomeActivity2"
             android:exported="false" />
         <activity
-            android:name=".WellcomeActivity1"
+            android:name=".view.WellcomeActivity1"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
