--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.VV1"
         tools:targetApi="31">
         <activity
+            android:name=".view.SwipeTogetherActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.SignupActivity"
             android:exported="false" />
         <activity
